fixed overlapping issues, should be mobile responsive on almost all models

--- a/src/style/layout/_sections.scss
+++ b/src/style/layout/_sections.scss
@@ -1,7 +1,6 @@
 // Section
-section {
+.section {
   padding: 5rem 0rem;
-  display: table;
   @include respond(phone) {
     border: none;
     padding-left: 1rem;
